--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -181,7 +181,7 @@ set(SEEK_STATICLIB_NAME ${PROJECT_NAME}-static CACHE STRING "" FORCE)
 
 if(TARGET_PLATFORM_WINDOWS)
     set(SEEK_BUILD_SHAREDLIB TRUE)
-    set(SEEK_STATICLIB_DEPENDENT_LIBS dxgi d3d11 d3dcompiler dxguid Windowscodecs Ws2_32 Winmm)    
+    set(SEEK_STATICLIB_DEPENDENT_LIBS dxgi d3d11 d3dcompiler dxguid Windowscodecs Ws2_32 Winmm)
 endif()    
 
 
@@ -193,6 +193,7 @@ target_link_libraries(${SEEK_STATICLIB_NAME} PUBLIC
     rapidjson
     eigen
     zlib
+    ${SEEK_STATICLIB_DEPENDENT_LIBS}
 )
 target_include_directories(${SEEK_STATICLIB_NAME} PUBLIC ${SEEK_ENGINE_SOURCE_DIR})
 
@@ -201,6 +202,5 @@ target_include_directories(${SEEK_STATICLIB_NAME} PUBLIC ${SEEK_ENGINE_SOURCE_DI
 ############################################ seek_engine shared lib ############################################
 if(SEEK_BUILD_SHAREDLIB)
     add_library(${SEEK_SHAREDLIB_NAME} SHARED ${SEEK_ENGINE_SOURCE_DIR}/fake.cpp)
-    target_link_libraries(${SEEK_SHAREDLIB_NAME} PUBLIC ${SEEK_STATICLIB_NAME})    
-    #target_include_directories(${SEEK_SHAREDLIB_NAME} PUBLIC ${SEEK_ENGINE_SOURCE_DIR})
+    target_link_libraries(${SEEK_SHAREDLIB_NAME} PUBLIC ${SEEK_STATICLIB_NAME})
 endif()
