--- a/shader/CMakeLists.txt
+++ b/shader/CMakeLists.txt
@@ -76,9 +76,9 @@ if(NOT DEFINED ShaderCompiler_bin)
     message(FATAL_ERROR "ShaderCompiler_bin not defined")
 endif()
 
-set(generated_shader_depend_dir         ${DVF_GENERATED_DEPEND_DIR})
-set(generated_shader_tag_depend_dir     ${DVF_GENERATED_TAG_DIR}/${SHADER_DEPEND_FILE_SUFFIX})
-set(generated_shader_tag_compile_dir    ${DVF_GENERATED_TAG_DIR}/${SHADER_COMPILE_FILE_SUFFIX})
+set(generated_shader_depend_dir         ${SEEK_GENERATED_DEPEND_DIR})
+set(generated_shader_tag_depend_dir     ${SEEK_GENERATED_TAG_DIR}/${SHADER_DEPEND_FILE_SUFFIX})
+set(generated_shader_tag_compile_dir    ${SEEK_GENERATED_TAG_DIR}/${SHADER_COMPILE_FILE_SUFFIX})
 
 ############################## depend ##############################
 set(all_generated_tag_depend_tagfiles)
@@ -102,22 +102,22 @@ endforeach()
 set(shader_compile_options)
 
 if (shader_target_platform STREQUAL "hlsl")
-    list(APPEND shader_compile_options "--define=\"DVF_HLSL=1\"")
+    list(APPEND shader_compile_options "--define=\"SEEK_HLSL=1\"")
 elseif(shader_target_platform STREQUAL "essl")
-    list(APPEND shader_compile_options "--define=\"DVF_GLSL_ES=1\"")
+    list(APPEND shader_compile_options "--define=\"SEEK_GLSL_ES=1\"")
 elseif(shader_target_platform STREQUAL "msl_macos")
-    list(APPEND shader_compile_options "--define=\"DVF_MSL_MACOS=1\"")
+    list(APPEND shader_compile_options "--define=\"SEEK_MSL_MACOS=1\"")
 elseif(shader_target_platform STREQUAL "msl_ios")
-    list(APPEND shader_compile_options "--define=\"DVF_MSL_IOS=1\"")
+    list(APPEND shader_compile_options "--define=\"SEEK_MSL_IOS=1\"")
 elseif(shader_target_platform STREQUAL "spriv")
-    list(APPEND shader_compile_options "--define=\"DVF_SPRIV=1\"")
+    list(APPEND shader_compile_options "--define=\"SEEK_SPRIV=1\"")
 endif()
 
-if (${DVF_SHADER_GENERATE_DEBUG})
+if (${SEEK_SHADER_GENERATE_DEBUG})
     list(APPEND shader_compile_options "--debug")
 endif()
 
-if (DVF_SHADER_GENERATE_BYTE_CODE)
+if (SEEK_SHADER_GENERATE_BYTE_CODE)
     list(APPEND shader_compile_options "--bytecode")
 endif()
 
