particle init done

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -57,4 +57,5 @@ function(add_sample_project sample_name)
 endfunction(add_sample_project)
 
 add_sample_project(01.Tutorial)
+add_sample_project(02.Particles)
 
