--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -46,6 +46,8 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/effect/technique.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/technique.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/variable.h
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/watermark_postprocess.h
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/watermark_postprocess.cpp
 
     # kernel
     ${SEEK_ENGINE_SOURCE_DIR}/kernel/kernel.h
