--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -104,10 +104,11 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/base/rhi_texture.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/base/viewport.h
     
+    # d3d_rhi_common
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_rhi_common/d3d_adapter.h
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_rhi_common/d3d_adapter.cpp
 
     # d3d11_rhi
-    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_adapter.h
-    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_adapter.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_fence.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_fence.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_framebuffer.h
