--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -145,10 +145,14 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d11_rhi/d3d11_window.cpp
 
     # d3d12 rhi
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_framebuffer.h
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_framebuffer.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_predeclare.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_rhi_context.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_rhi_context.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_rhi_context_factory.cpp
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_window.h
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d12_rhi/d3d12_window.cpp
 
     # vulkan rhi
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/vulkan_rhi/vulkan_rhi_context.h
