CameraInfo： nearFarPlane --> farPlane

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -33,6 +33,8 @@ set(ENGINE_CODE
     # effect
     ${SEEK_ENGINE_SOURCE_DIR}/effect/command_buffer.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/command_buffer.cpp
+    #${SEEK_ENGINE_SOURCE_DIR}/effect/deferred_shading_renderer.h
+    #${SEEK_ENGINE_SOURCE_DIR}/effect/deferred_shading_renderer.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/draw_call.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/draw_call.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/effect.h
