--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -36,17 +36,19 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/effect/command_buffer.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/command_buffer.cpp
     #${SEEK_ENGINE_SOURCE_DIR}/effect/deferred_shading_renderer.h
-    #${SEEK_ENGINE_SOURCE_DIR}/effect/deferred_shading_renderer.cpp
-    ${SEEK_ENGINE_SOURCE_DIR}/effect/gi.h
-    ${SEEK_ENGINE_SOURCE_DIR}/effect/gi.cpp
-    ${SEEK_ENGINE_SOURCE_DIR}/effect/hdr_postprocess.h
-    ${SEEK_ENGINE_SOURCE_DIR}/effect/hdr_postprocess.cpp
+    #${SEEK_ENGINE_SOURCE_DIR}/effect/deferred_shading_renderer.cpp   
     ${SEEK_ENGINE_SOURCE_DIR}/effect/draw_call.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/draw_call.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/effect.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/effect.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/forward_shading_renderer.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/forward_shading_renderer.cpp
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/gi.h
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/gi.cpp
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/hdr_postprocess.h
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/hdr_postprocess.cpp
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/ibl.h
+    ${SEEK_ENGINE_SOURCE_DIR}/effect/ibl.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/parameter.h
     ${SEEK_ENGINE_SOURCE_DIR}/effect/parameter.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/effect/postprocess.h
