--- a/shader/CMakeLists.txt
+++ b/shader/CMakeLists.txt
@@ -52,6 +52,7 @@ set(shader_sources_files
     ${SEEK_SHADER_SOURCE_DIR}/SkyBoxPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/SsaoVS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/SsaoVS.dsf
+    ${SEEK_SHADER_SOURCE_DIR}/TaaPS.dsf
 
 
     ${SEEK_SHADER_SOURCE_DIR}/WaterMarkPS.dsf
