--- a/shader/CMakeLists.txt
+++ b/shader/CMakeLists.txt
@@ -42,7 +42,8 @@ set(shader_sources_files
     ${SEEK_SHADER_SOURCE_DIR}/GenerateGBufferPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/GenerateReflectiveShadowMapPS.dsf    
     ${SEEK_SHADER_SOURCE_DIR}/GiRsmPS.dsf
-    ${SEEK_SHADER_SOURCE_DIR}/GiRsmVS.dsf    
+    ${SEEK_SHADER_SOURCE_DIR}/GiRsmVS.dsf
+    ${SEEK_SHADER_SOURCE_DIR}/LightCullingCS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/IrradianceConvolutionPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/MeshRenderingVS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/PostProcessVS.dsf
