--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -75,3 +75,4 @@ add_sample_project(01.Tutorial)
 add_sample_project(02.Particles)
 add_sample_project(03.MeshLoader)
 add_sample_project(04.Lighting)
+add_sample_project(05.DeferredShading)
