--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -76,3 +76,4 @@ add_sample_project(02.Particles)
 add_sample_project(03.MeshLoader)
 add_sample_project(04.Lighting)
 add_sample_project(05.DeferredShading)
+add_sample_project(06.GlobalIllumination)
