--- a/shader/CMakeLists.txt
+++ b/shader/CMakeLists.txt
@@ -40,7 +40,7 @@ set(shader_sources_files
     ${SEEK_SHADER_SOURCE_DIR}/GenerateCascadedShadowMapPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/GenerateCubeShadowMapPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/GenerateGBufferPS.dsf
-    ${SEEK_SHADER_SOURCE_DIR}/GenerateReflectiveShadowMapPS.dsf    
+    ${SEEK_SHADER_SOURCE_DIR}/GenerateRsmPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/GiRsmPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/GiRsmVS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/LightCullingCS.dsf
