update d3d12 texture & render view

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -129,6 +129,8 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/d3d_common_predeclare.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/d3d_adapter.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/d3d_adapter.cpp
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/d3d_common_translate.h
+    ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/d3d_common_translate.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/dxgi_helper.h
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/d3d_common/dxgi_helper.cpp
 
