del CreateStructuredBuffer & CreateByteAddressBuffer

--- a/shader/CMakeLists.txt
+++ b/shader/CMakeLists.txt
@@ -46,7 +46,7 @@ set(shader_sources_files
     ${SEEK_SHADER_SOURCE_DIR}/GiVS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/LightCullingCS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/IrradianceConvolutionPS.dsf
-    #${SEEK_SHADER_SOURCE_DIR}/LPVInjectPS.dsf
+    ${SEEK_SHADER_SOURCE_DIR}/LPVInjectPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/LPVInjectVS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/LPVPropagationPS.dsf
     ${SEEK_SHADER_SOURCE_DIR}/LPVPropagationVS.dsf
